[package]
name = "camtconvert"
version = "0.1.0"
edition = "2024"
authors = ["Samuel Van der Stappen <shogun_einst.0i@icloud.com>"]
description = "Convert CAMT files from version 053.001.10 to 053.001.08 for use with Bexio accounting software"
repository = "https://github.com/samvdst/camtconvert"
license = "MIT OR Apache-2.0"
keywords = ["camt", "banking", "xml", "converter", "swiss"]
categories = ["command-line-utilities", "finance"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
